elastic_search/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsearch-app-deployment
  namespace: doctools
spec:
  selector:
    matchLabels:
      app: docsearch-app-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: docsearch-app-deployment
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: docsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch-storage
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: docsearch-app-config
              subPath: elasticsearch.yml

      volumes:
        - name: elasticsearch-storage
          persistentVolumeClaim:
            claimName: docsearch-app-pv-claim
        - name: docsearch-app-config
          configMap:
            name: docsearch-app-config
            items:
              - key: elasticsearch.yml
                path: elasticsearch.yml
---
apiVersion: v1
kind: Service
metadata:
  name: docsearch-app-deployment
  namespace: doctools
  labels:
    app: docsearch-app-deployment
spec:
  type: ClusterIP
  selector:
    app: docsearch-app-deployment
  ports:
    - name: http
      port: 9200
      protocol: TCP
    - name: transport
      port: 9300
      protocol: TCP
